tests/NormalTests/paczka1/fuzzy1/42357015.err
Error in line 1: S436 S768 10,8
Error in line 2: S436 A255 26,6
Error in line 6: FwkA28r S436 88,6
Error in line 12: z3jITzCBqcq S768 99,2
Error in line 14: z3jITzCBqcq A228 191,93
Error in line 4: fOGbNnm A228 30,8
Error in line 35: S436 A228 19,9
Error in line 33: zXSZ6 S436 3,7
